--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -1,43 +1,48 @@
-'Sklad Express': '__Sklad Express'
-'Footer brand': '__Footer brand'
-'Footer text': '__Footer text'
-'Add Address': '__Add Address'
-'User Name': '__User Name'
-Country: __Country
-Adress: __Adress
-'Edit Address': '__Edit Address'
-Dashboard: __Dashboard
-'Main Navigation': '__Main Navigation'
-Profile: Профиль
-Parcels: __Parcels
-Addresses: __Addresses
+'Sklad Express': 'Sklad Express'
+'Footer brand': 'Footer brand'
+'Footer text': 'Footer text'
+'Add Address': 'Добавить адрес'
+'User Name': 'Имя пользователя'
+'Country': 'Страна'
+'Adress': 'Адрес'
+'Edit Address': 'Редактировать адрес'
+'Dashboard': 'Главная'
+'Main Navigation': ''
+'Profile': 'Профиль'
+'Parcels': 'Посылки'
+'Addresses': 'Адреса'
 'Addresses List': 'Список адресов'
-'Addresses Create': '__Addresses Create'
-Contact: __Contact
-'Edit profile': '__Edit profile'
-'Contact Information': '__Contact Information'
-'First name': '__First name'
-'Second name': '__Second name'
-'Last name': '__Last name'
-Phone: __Phone
-'Email address': '__Email address'
-Logout: __Logout
-Register: __Register
-'SIGNUP TO GET INSTANT ACCESS': '__SIGNUP TO GET INSTANT ACCESS'
-Password: __Password
-'Retype Password': '__Retype Password'
-'I agree with the': '__I agree with the'
-terms: __terms
-'Create account': '__Create account'
-'Have an account?': '__Have an account?'
-Signup: __Signup
-Authentication: __Authentication
-'PASSWORD RESET': '__PASSWORD RESET'
-'Fill with your mail to receive instructions on how to reset your password.': '__Fill with your mail to receive instructions on how to reset your password.'
-'Enter email': '__Enter email'
-'SIGN IN TO CONTINUE.': '__SIGN IN TO CONTINUE.'
-'Forgot your password?': '__Forgot your password?'
-Login: __Login
-'Need to Signup?': '__Need to Signup?'
-'Register Now': '__Register Now'
+'Addresses Create': 'Добавить адрес'
+'Contact': 'Контакт'
+'Edit profile': 'Редактировать профиль'
+'Contact Information': 'Контактная информация'
+'First name': 'Имя'
+'Second name': 'Отчество'
+'Last name': 'Фамилия'
+'Phone': 'Телефон'
+'Email address': 'Email'
+'Logout': 'Выход'
+'Register': 'Регистрация'
+'SIGNUP TO GET INSTANT ACCESS': 'Зарегистрируйтесь, чтобы войти'
+'Password': 'Пароль'
+'Retype Password': 'Повторите пароль'
+'I agree with the': 'Я согласен(-сна)'
+'terms': 'с условиями'
+'Create account': 'Создать аккаунт'
+'Have an account?': 'Нет аккаунта?'
+Signup: 'Регистрация'
+Authentication: 'Вход'
+'PASSWORD RESET': 'Сброс пароля'
+'Fill with your mail to receive instructions on how to reset your password.': 'Введите свой Email для получения инструкции для сброса пароля.'
+'Enter email': 'Введите Email'
+'SIGN IN TO CONTINUE.': 'Войдите для продолжения'
+'Forgot your password?': 'Забыли Ваш пароль?'
+'Login': 'Вход'
+'Need to Signup?': 'Зарегистрироваться?'
+'Register Now': 'Зарегистрироваться сейчас'
 'Save sucess': 'Профиль успешно сохранен'
+'Save avatar': 'Сохранить'
+'Save': 'Сохранить'
+'Hello': 'Привет'
+'Cabinet': 'Кабинет'
+'Remember Me': 'Запомнить меня'
