edited translation ru for profile form

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -46,3 +46,4 @@ Authentication: 'Вход'
 'Hello': 'Привет'
 'Cabinet': 'Кабинет'
 'Remember Me': 'Запомнить меня'
+'Error. Please fill all fields': 'Ошибка. Заполните, пожалуйста, все поля'
