edited address form

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -47,3 +47,32 @@ Authentication: 'Вход'
 'Cabinet': 'Кабинет'
 'Remember Me': 'Запомнить меня'
 'Error. Please fill all fields': 'Ошибка. Заполните, пожалуйста, все поля'
+#Addresses
+'Data about the address delivery': 'Данные об адресе доставки'
+'Choise delivery method': 'Выбрать способ доставки'
+'Addresses Edit': 'Редактирование адреса'
+'Address Create': 'Добавить адрес'
+'Region': 'Область'
+'Enter region': 'Введите область'
+'District': 'Район'
+'Enter district': 'Введите район'
+'City': 'Город'
+'Enter city': 'Введите название города'
+'ZIP': 'Индекс'
+'Enter ZIP': 'Введите индекс'
+'Street': 'Название улицы'
+'Enter street': 'Введите название улицы'
+'Number of house': 'Номер дома'
+'Enter number house': 'Введите номер дома'
+'Number of apartment': 'Квартира/комната'
+'Enter number apartment': 'Введите номер квартиры/комнаты'
+"Receiver's first name": 'Имя получателя'
+'Enter first name': 'Введите имя'
+"Receiver's last name": 'Фамилия получателя'
+'Enter last name': 'Введите фамилию'
+"Receiver's second name": 'Отчество получателя'
+'Enter second name': 'Введите отчество'
+"Receiver's phone": 'Телефон получателя'
+"Enter receiver's phone": 'Введите номер телефона'
+'Alias of address': 'Краткое название адреса'
+'Enter alias of address': 'Введите краткое название адреса'
