--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -1,78 +1,105 @@
 'Sklad Express': 'Sklad Express'
 'Footer brand': 'Footer brand'
 'Footer text': 'Footer text'
-'Add Address': 'Добавить адрес'
-'User Name': 'Имя пользователя'
-'Country': 'Страна'
-'Adress': 'Адрес'
-'Edit Address': 'Редактировать адрес'
-'Dashboard': 'Главная'
-'Main Navigation': ''
-'Profile': 'Профиль'
-'Parcels': 'Посылки'
-'Addresses': 'Адреса'
-'Addresses List': 'Список адресов'
-'Addresses Create': 'Добавить адрес'
-'Contact': 'Контакт'
-'Edit profile': 'Редактировать профиль'
-'Contact Information': 'Контактная информация'
-'First name': 'Имя'
-'Second name': 'Отчество'
-'Last name': 'Фамилия'
-'Phone': 'Телефон'
-'Email address': 'Email'
-'Logout': 'Выход'
-'Register': 'Регистрация'
+Add Address: 'Добавить адрес'
+User Name: 'Имя пользователя'
+Country: Страна
+Adress: Адрес
+Edit Address: Редактировать адрес
+Dashboard: Главная
+Main Navigation: ''
+Profile: Профиль
+Parcels: Посылки
+Addresses: Адреса
+Addresses List: Список адресов
+Addresses Create: Добавить адрес
+Contact: Контакт
+Edit profile: Редактировать профиль
+Contact Information: Контактная информация
+First name: Имя
+Second name: Отчество
+Last name: Фамилия
+Phone: Телефон
+'Email address': Email
+Logout: Выход
+Register: Регистрация
 'SIGNUP TO GET INSTANT ACCESS': 'Зарегистрируйтесь, чтобы войти'
-'Password': 'Пароль'
+Password: Пароль
 'Retype Password': 'Повторите пароль'
 'I agree with the': 'Я согласен(-сна)'
-'terms': 'с условиями'
+terms: 'с условиями'
 'Create account': 'Создать аккаунт'
 'Have an account?': 'Нет аккаунта?'
-Signup: 'Регистрация'
-Authentication: 'Вход'
+Signup: Регистрация
+Authentication: Вход
 'PASSWORD RESET': 'Сброс пароля'
 'Fill with your mail to receive instructions on how to reset your password.': 'Введите свой Email для получения инструкции для сброса пароля.'
 'Enter email': 'Введите Email'
 'SIGN IN TO CONTINUE.': 'Войдите для продолжения'
 'Forgot your password?': 'Забыли Ваш пароль?'
-'Login': 'Вход'
+Login: Вход
 'Need to Signup?': 'Зарегистрироваться?'
 'Register Now': 'Зарегистрироваться сейчас'
 'Save sucess': 'Профиль успешно сохранен'
-'Save avatar': 'Сохранить'
-'Save': 'Сохранить'
-'Hello': 'Привет'
-'Cabinet': 'Кабинет'
+'Save avatar': Сохранить
+Save: Сохранить
+Hello: Привет
+Cabinet: Кабинет
 'Remember Me': 'Запомнить меня'
 'Error. Please fill all fields': 'Ошибка. Заполните, пожалуйста, все поля'
-#Addresses
 'Data about the address delivery': 'Данные об адресе доставки'
 'Choise delivery method': 'Выбрать способ доставки'
 'Addresses Edit': 'Редактирование адреса'
 'Address Create': 'Добавить адрес'
-'Region': 'Область'
+Region: Область
 'Enter region': 'Введите область'
-'District': 'Район'
+District: Район
 'Enter district': 'Введите район'
-'City': 'Город'
+City: Город
 'Enter city': 'Введите название города'
-'ZIP': 'Индекс'
+ZIP: Индекс
 'Enter ZIP': 'Введите индекс'
-'Street': 'Название улицы'
+Street: 'Название улицы'
 'Enter street': 'Введите название улицы'
 'Number of house': 'Номер дома'
 'Enter number house': 'Введите номер дома'
-'Number of apartment': 'Квартира/комната'
+'Number of apartment': Квартира/комната
 'Enter number apartment': 'Введите номер квартиры/комнаты'
-"Receiver's first name": 'Имя получателя'
+'Receivers first name': 'Имя получателя'
 'Enter first name': 'Введите имя'
-"Receiver's last name": 'Фамилия получателя'
+'Receivers last name': 'Фамилия получателя'
 'Enter last name': 'Введите фамилию'
-"Receiver's second name": 'Отчество получателя'
+'Receivers second name': 'Отчество получателя'
 'Enter second name': 'Введите отчество'
-"Receiver's phone": 'Телефон получателя'
-"Enter receiver's phone": 'Введите номер телефона'
+'Receivers phone': 'Телефон получателя'
+'Enter receivers phone': 'Введите номер телефона'
 'Alias of address': 'Краткое название адреса'
 'Enter alias of address': 'Введите краткое название адреса'
+'New Parcerls List': '__New Parcerls List'
+'Send Parcerls List': '__Send Parcerls List'
+'Send Parcels List': '__Send Parcels List'
+'Parcels Create': '__Parcels Create'
+trackingNumber: __trackingNumber
+shipDate: __shipDate
+products: __products
+addresses: __addresses
+sendDetailWeight: __sendDetailWeight
+sendDetailLength: __sendDetailLength
+sendDetailWidth: __sendDetailWidth
+sendDetailHeight: __sendDetailHeight
+shippingCosts: __shippingCosts
+volumeWeigth: __volumeWeigth
+declareValue: __declareValue
+comment: __comment
+'Add product': '__Add product'
+'Add order': '__Add order'
+'Create Date': '__Create Date'
+'trackingNumber Nova Pochta': '__trackingNumber Nova Pochta'
+shipgCost: __shipgCost
+'Edit Order': '__Edit Order'
+descEn: __descEn
+price: __price
+count: __count
+Remove product: __Remove product
+copyRigtht: __copyRigtht
+Status: Статус
