added orders(parcels) admin.. translate..

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -102,12 +102,15 @@ Cabinet: Кабинет
 'sendDetailHeight': 'Высота'
 'shippingCosts': 'Стоимость'
 'volumeWeigth': 'Объем'
+'Volume Weigth': 'Объем'
 'declareValue': 'Объявленная стоимость'
+'Declare Value': 'Объявленная стоимость'
 'comment': 'Комментарий'
 'Add product': 'Добавить'
 'Add order': 'Добвить'
 'Create Date': 'Дата добавления'
 'trackingNumber Nova Pochta': 'Трекинговый номер Нова почта'
+'Tracking Number': 'Трекинговый номер'
 'shipgCost': 'Стоимость доставки'
 'Edit Order': 'Редактировать'
 'descEn': 'Описание на английском'
@@ -130,3 +133,22 @@ Cabinet: Кабинет
 'Plain Password': 'Пароль'
 'Status Name': 'Название'
 'new': 'Новый'
+'Order Status': 'Статус'
+'Send From Address': 'Адрес отправки'
+'Comment': 'Комментарий'
+'Send From Index': 'Индекс отправки'
+'Send From City': 'Город отправки'
+'Send From Phone': 'Телефон отправителя'
+'Send From Email': 'Email отправителя'
+'Send Detail Places': 'Детали отправки'
+'Send Detail Weight': 'Вес'
+'Send Detail Length': 'Длина'
+'Send Detail Width': 'Ширина'
+'Send Detail Height': 'Высота'
+'Email': 'Email'
+'Address': 'Адрес'
+'Shipping Costs': 'Стоимость отгрузки'
+'Delivery Status': 'Статус доставки'
+'From Country': 'Страна отправки'
+'Towarehouse': 'Склад'
+'Quantity': 'Количество'
