--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -152,3 +152,4 @@ Cabinet: Кабинет
 'From Country': 'Страна отправки'
 'Towarehouse': 'Склад'
 'Quantity': 'Количество'
+'Save success': 'Изменения успешно сохранены'
