--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -89,17 +89,20 @@ Cabinet: Кабинет
 'My address': 'Личный адрес'
 'Enter alias of address': 'Введите краткое название адреса'
 'New Parcerls List': 'Новый список посылок'
-'Send Parcerls List': '__Send Parcerls List'
-'Send Parcels List': '__Send Parcels List'
-'Parcels Create': '__Parcels Create'
+'Send Parcerls List': 'Отправленные'
+'Send Parcels List': 'Отправленные'
+'Parcels Create': 'Создать'
 'trackingNumber': 'Трекинговый номер'
 'shipDate': 'Дата отгрузки'
 'products': 'Продукты'
 'addresses': 'Адреса'
 'sendDetailWeight': 'Вес'
 'sendDetailLength': 'Длина'
+'sendDetailLength placeholder': 'Длина'
 'sendDetailWidth': 'Ширина'
+'sendDetailWidth placeholder': 'Ширина'
 'sendDetailHeight': 'Высота'
+'sendDetailHeight placeholder': 'Высота'
 'shippingCosts': 'Стоимость'
 'volumeWeigth': 'Объем'
 'Volume Weigth': 'Объем'
@@ -153,3 +156,4 @@ Cabinet: Кабинет
 'Towarehouse': 'Склад'
 'Quantity': 'Количество'
 'Save success': 'Изменения успешно сохранены'
+'post_profile_from_address': 'Адрес отправителя'
