fix list addresses/update address

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -157,3 +157,11 @@ Cabinet: Кабинет
 'Quantity': 'Количество'
 'Save success': 'Изменения успешно сохранены'
 'post_profile_from_address': 'Адрес отправителя'
+'Payment': 'Оплаты'
+'Payment List': 'Список оплат'
+'Nomer scheta': 'Номер счета'
+'Sposob oplaty': 'Способ оплаты'
+'Sum': 'Сумма'
+'str.': 'улица'
+'Address List': 'Список адресов'
+'Address Edit': 'Редактировать адрес'
