--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -88,7 +88,7 @@ Cabinet: Кабинет
 'Alias Of Address': 'Краткое название адреса'
 'My address': 'Личный адрес'
 'Enter alias of address': 'Введите краткое название адреса'
-'New Parcerls List': 'Новый список посылок'
+'New Parcerls List': 'Новые посылки'
 'Send Parcerls List': 'Отправленные'
 'Send Parcels List': 'Отправленные'
 'Parcels Create': 'Создать'
