--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -36,11 +36,12 @@ Password: Пароль
 terms: 'с условиями'
 'Create account': 'Создать аккаунт'
 'Have an account?': 'Нет аккаунта?'
-Signup: Регистрация
+Signup: Вход
 Authentication: Вход
 'PASSWORD RESET': 'Сброс пароля'
 'Fill with your mail to receive instructions on how to reset your password.': 'Введите свой Email для получения инструкции для сброса пароля.'
 'Enter email': 'Введите Email'
+'Enter _email': 'Email'
 'SIGN IN TO CONTINUE.': 'Войдите для продолжения'
 'Forgot your password?': 'Забыли Ваш пароль?'
 Login: Вход
@@ -110,13 +111,14 @@ Cabinet: Кабинет
 'Declare Value': 'Объявленная стоимость'
 'comment': 'Комментарий'
 'Add product': 'Добавить'
-'Add order': 'Добвить'
+'Add order': 'Добавить'
 'Create Date': 'Дата добавления'
 'trackingNumber Nova Pochta': 'Трекинговый номер Нова почта'
 'Tracking Number': 'Трекинговый номер'
 'shipgCost': 'Стоимость доставки'
 'Edit Order': 'Редактировать'
 'descEn': 'Описание на английском'
+'descUa': 'Описание на украинском'
 'price': 'Цена'
 'count': 'Количество'
 'Remove product': 'Удалить'
@@ -166,3 +168,15 @@ Cabinet: Кабинет
 'Address List': 'Список адресов'
 'Address Edit': 'Редактировать адрес'
 'Payments': 'Оплаты'
+'Reset': 'Сброс'
+'Email not found': 'Email не найден'
+'New password was sent to you on your email': 'Новый пароль был отправлен на почту'
+'Card': 'Карта'
+'This value is required.': 'Обязательное значение'
+'New Orders': 'Новые'
+'Sent Orders': 'Отправленные'
+'Late Payments': 'Последние платежы'
+'Not pay yet': 'Нет платежей'
+'No order': 'Нет посылок'
+'TN': 'ТН'
+'Type and hit enter ...': 'Введите и нажмите ввод ...фт'
