fix button payment

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -179,4 +179,5 @@ Cabinet: Кабинет
 'Not pay yet': 'Нет платежей'
 'No order': 'Нет посылок'
 'TN': 'ТН'
-'Type and hit enter ...': 'Введите и нажмите ввод ...фт'
+'Type and hit enter ...': 'Введите и нажмите ввод ...'
+'Pay': 'Оплатить'
