--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -93,7 +93,7 @@ Cabinet: Кабинет
 'Send Parcerls List': 'Отправленные'
 'Send Parcels List': 'Отправленные'
 'Parcels Create': 'Создать'
-'trackingNumber': 'Трекинговый номер'
+'trackingNumber': 'Трек номер'
 'shipDate': 'Дата отгрузки'
 'products': 'Продукты'
 'addresses': 'Адреса'
@@ -113,8 +113,8 @@ Cabinet: Кабинет
 'Add product': 'Добавить'
 'Add order': 'Добавить'
 'Create Date': 'Дата добавления'
-'trackingNumber Nova Pochta': 'Трекинговый номер Нова почта'
-'Tracking Number': 'Трекинговый номер'
+'trackingNumber Nova Pochta': 'Трек номер | Нова почта'
+'Tracking Number': 'Трек номер'
 'shipgCost': 'Стоимость доставки'
 'Edit Order': 'Редактировать'
 'descEn': 'Описание на английском'
@@ -181,3 +181,5 @@ Cabinet: Кабинет
 'TN': 'ТН'
 'Type and hit enter ...': 'Введите и нажмите ввод ...'
 'Pay': 'Оплатить'
+'count_short': 'К-во'
+'Cancel': 'Отмена'
