edited view addresses list

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -184,3 +184,14 @@ Cabinet: Кабинет
 'count_short': 'К-во'
 'Cancel': 'Отмена'
 'Russia': 'Россия'
+'Find for tracking number': 'Результат поиска'
+'Nothing Found': 'Ничего не найдено'
+'Date': 'Дата'
+'StatusDescription': 'Статус'
+'Details': 'Подробней'
+'Recipient': 'Получатель'
+'Description': 'Описание'
+'EditAddress': 'Изменить'
+'DeleteAddress': 'Удалить'
+'Confirmed': 'Подтвержден'
+'Not Confirmed': 'Не подтвержден'
