--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -195,3 +195,7 @@ Cabinet: Кабинет
 'DeleteAddress': 'Удалить'
 'Confirmed': 'Подтвержден'
 'Not Confirmed': 'Не подтвержден'
+'No Parcels': 'Нет посылок'
+'No Payments': 'Нет платежей'
+'New Parcels List': 'Новые посылки'
+
