Profile and address

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -198,4 +198,10 @@ Cabinet: Кабинет
 'No Parcels': 'Нет посылок'
 'No Payments': 'Нет платежей'
 'New Parcels List': 'Новые посылки'
-
+Orders Update sucusfull: Данные посылки обновлены
+Orders Added sucusfull: Посылка добавлена
+Loading...: Загрузка...
+Close: Закрыть
+Save changes: Сохранить
+Order Edit: Изменение посылки
+No parcel: Список отправлений пуст
