Profile and address

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -205,3 +205,4 @@ Close: Закрыть
 Save changes: Сохранить
 Order Edit: Изменение посылки
 No parcel: Список отправлений пуст
+Your password should be at least 6 characters: Ваш пароль должен содержать не менее 6 символов
