--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -113,7 +113,7 @@ Cabinet: Кабинет
 'Add product': 'Добавить'
 'Add order': 'Добавить'
 'Create Date': 'Дата добавления'
-'trackingNumber Nova Pochta': 'Трек номер | Нова почта'
+'trackingNumber Nova Pochta': 'Трек номер|Нова почта'
 'Tracking Number': 'Трек номер'
 'shipgCost': 'Стоимость доставки'
 'Edit Order': 'Редактировать'
@@ -206,3 +206,4 @@ Save changes: Сохранить
 Order Edit: Изменение посылки
 No parcel: Список отправлений пуст
 Your password should be at least 6 characters: Ваш пароль должен содержать не менее 6 символов
+Action: Действие
