--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -110,16 +110,16 @@ Cabinet: Кабинет
 'declareValue': 'Объявленная стоимость'
 'Declare Value': 'Объявленная стоимость'
 'comment': 'Комментарий'
-'Add product': 'Добавить'
+'Add product': +
 'Add order': 'Добавить'
 'Create Date': 'Дата добавления'
-'trackingNumber Nova Pochta': 'Трек номер|Нова почта'
+'trackingNumber Nova Pochta': 'ТН|Нова почта'
 'Tracking Number': 'Трек номер'
 'shipgCost': 'Стоимость доставки'
 'Edit Order': 'Редактировать'
 'descEn': 'Описание на английском'
 'descUa': 'Описание на украинском'
-'price': 'Цена'
+'price': 'Стоимость'
 'count': 'Количество'
 'Remove product': 'Удалить'
 'copyRigtht': 'Авторское право'
