--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -206,4 +206,4 @@ Save changes: Сохранить
 Order Edit: Изменение посылки
 No parcel: Список отправлений пуст
 Your password should be at least 6 characters: Ваш пароль должен содержать не менее 6 символов
-Action: Действие
+Action: Действия
