--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -207,3 +207,4 @@ Order Edit: Изменение посылки
 No parcel: Список отправлений пуст
 Your password should be at least 6 characters: Ваш пароль должен содержать не менее 6 символов
 Action: Действие
+nopaid: Ожидает оплаты
