finish ukraine locale

--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -29,10 +29,10 @@ Phone: Телефон
 Email address: Email
 Logout: Вихід
 Register: Реєстрація
-SIGNUP TO GET INSTANT ACCESS: Увійдіть, щоб увійти
+SIGNUP TO GET INSTANT ACCESS: Зареєструйтеся, щоб увійти
 Password: Пароль
 Retype Password: Повторіть пароль
-I agree with the: Я згоден (-сна)
+I agree with the: Я згоден (-на)
 terms: з умовами
 Create account: Створити обліковий запис
 Have an account ?: Ні аккаунта?
