Price Weight Econom

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -212,3 +212,5 @@ Ukrainian: Украинский
 Russian: Русский
 Track the departure: Отследить отправление
 Track down: Отследить
+OrderType: Тип доставки
+PriceWeightEconom: Прайс Эконом-Вес
