--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -212,3 +212,5 @@ Ukrainian: Український
 Russian: Русский
 Track the departure: Відстежити відправлення
 Track down: Відстежити
+OrderType: Тип доставки
+PriceWeightEconom: Прайс Економ-Вага
