vip user econom weight prices

--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -214,3 +214,4 @@ Track the departure: Відстежити відправлення
 Track down: Відстежити
 OrderType: Тип доставки
 PriceWeightEconom: Прайс Економ-Вага
+PriceWeightEconomVip: VIP Прайс Економ-Вага
