--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -7,7 +7,7 @@ Country: Страна
 Adress: Адрес
 Edit Address: Редактировать адрес
 Dashboard: Главная
-Main Navigation: 
+Main Navigation:
 Profile: Профиль
 Parcels: Посылки
 Addresses: Адреса
@@ -39,6 +39,7 @@ Have an account?: Нет аккаунта?
 Signup: Вход
 Authentication: Вход
 PASSWORD RESET: Сброс пароля
+Title form suport parcels: Обратная связь
 Fill with your mail to receive instructions on how to reset your password.: Введите свой Email для получения инструкции для сброса пароля.
 Enter email: Введите Email
 Enter _email: Email
@@ -150,7 +151,9 @@ Send Detail Weight: Вес
 Send Detail Length: Длина
 Send Detail Width: Ширина
 Send Detail Height: Высота
-Email: Email
+Email: Ваш e-mail
+Subject: Тема сообщения
+Message: Сообщения
 Address: Адрес
 Shipping Costs: Стоимость отгрузки
 Delivery Status: Статус доставки
@@ -212,3 +215,4 @@ Ukrainian: Украинский
 Russian: Русский
 Track the departure: Отследить отправление
 Track down: Отследить
+Send: Отправить
