--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -55,7 +55,7 @@ Cabinet: Кабінет
 Remember Me: Запам'ятати мене
 Error. Please fill all fields: Помилка. Заповніть, будь ласка, всі поля
 Data about the address delivery: Дані про адресу доставки
-Title form suport parcels: Звернутись с тех підтримку
+Title form suport parcels: Зворотній зв'язок
 Choise delivery method: Вибрати спосіб доставки
 Addresses Edit: Редагування адреси
 Address Create: Додати адреса
@@ -217,3 +217,4 @@ Track the departure: Відстежити відправлення
 Track down: Відстежити
 Message : Ваше повідомнення
 Subject : Тема повідомнення
+Send: Відправити
