--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -217,3 +217,4 @@ Track the departure: Відстежити відправлення
 Track down: Відстежити
 Message : Ваше повідомнення
 Subject : Тема повідомнення
+Send: Відправити
