--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -52,6 +52,11 @@ Save avatar: Зберегти
 Save: Зберегти
 Hello: Привіт
 Cabinet: Кабінет
+Add: Додати
+Percles: посилку
+Send_d: Звернутись
+Support: В пiдтримку
+Tack comment: Коментaрiй заказа
 Remember Me: Запам'ятати мене
 Error. Please fill all fields: Помилка. Заповніть, будь ласка, всі поля
 Data about the address delivery: Дані про адресу доставки
@@ -123,7 +128,8 @@ descUa: Опис на українській
 price: Вартість
 count: Кількість
 Remove product: Видалити
-copyRigtht: Все права защищены.
+copyRigtht: Expressposhta всі права захищені.
+
 Status: Статус
 Users: Користувачі
 User: Користувач
