--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -131,7 +131,7 @@ Cost: Стоимость
 Weight: Вес
 Add: Добавить
 Percles: посылку
-Send_d: Обратится
+Send_d: Обратиться
 Support: В поддержку
 DeliveryPrice: Прайс на доставку
 OrderStatus: Статус посылки
