--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -126,6 +126,7 @@ Remove product: Удалить
 copyRigtht: Expressposhta все права защищены.
 Status: Статус
 Users: Пользователи
+Select type : Выбрать
 User: Пользователь
 Cost: Стоимость
 Weight: Вес
