--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -55,6 +55,7 @@ Cabinet: Кабінет
 Add: Додати
 Percles: посилку
 Send_d: Звернутись
+Select type : Вибрать
 Support: В пiдтримку
 Tack comment: Коментaрiй заказа
 Remember Me: Запам'ятати мене
