Add params for maxWeight limits

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -114,6 +114,7 @@ Add product: +
 Add order: Добавить
 Create Date: Дата добавления
 trackingNumber Nova Pochta: ТН|Нова почта
+NovaPochta: Новая почта
 Tracking Number: Трек номер
 shipgCost: Стоимость доставки
 Edit Order: Редактировать
