--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -114,6 +114,7 @@ Add product: +
 Add order: Додати
 Create Date: Дата додавання
 trackingNumber Nova Pochta: ТН | Нова пошта
+NovaPochta: Нова пошта
 Tracking Number: Трек номер
 shipgCost: Вартість доставки
 Edit Order: Редагувати
