Sonata translate ready

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -17,6 +17,7 @@ Contact: Контакт
 Edit profile: Редактировать профиль
 Contact Information: Контактная информация
 First name: Имя
+VipPriceWeightEkspress: Экспресс
 User First Name: Имя
 Second name: Отчество
 User Second Name: Отчество
