--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -227,4 +227,6 @@ Subject : Тема повідомнення
 OrderType: Тип доставки
 PriceWeightEconom: Прайс Економ-Вага
 PriceWeightEconomVip: VIP Прайс Економ-Вага
+VipPriceWeightEkspress: VIP Прайс Експрес-Вага
+PriceWeightEkspress: Прайс Експрес-Вага
 Send: Відправити
