--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -97,7 +97,7 @@ trackingNumber: Трек номер
 shipDate: Дата отгрузки
 products: Продукты
 addresses: Адреса
-sendDetailWeight: Вес
+sendDetailWeight: Вес (грамм)
 sendDetailLength: Длина
 sendDetailLength placeholder: Длина
 sendDetailWidth: Ширина
@@ -216,3 +216,5 @@ Track down: Отследить
 OrderType: Тип доставки
 PriceWeightEconom: Прайс Эконом-Вес
 PriceWeightEconomVip: VIP Прайс Эконом-Вес
+econom: Эконом
+express: Экспресс
