--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -104,7 +104,7 @@ trackingNumber: Трек номер
 shipDate: Дата відвантаження
 products: Продукти
 addresses: Адреси
-sendDetailWeight: Вага
+sendDetailWeight: Вага (грам)
 sendDetailLength: Довжина
 sendDetailLength placeholder: Довжина
 sendDetailWidth: Ширина
