--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -125,7 +125,7 @@ descUa: Описание на украинском
 price: Стоимость
 count: Количество
 Remove product: Удалить
-copyRigtht: Expressposhta все права защищены.
+copyRigtht: Expressposhta 2019. All Rights Reserved
 Status: Статус
 Users: Пользователи
 Select type : Выбрать
