--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -130,7 +130,7 @@ descUa: Опис на українській
 price: Вартість
 count: Кількість
 Remove product: Видалити
-copyRigtht: Expressposhta всі права захищені.
+copyRigtht: Expressposhta 2019. All Rights Reserved.
 
 Status: Статус
 Users: Користувачі
