change some transtations

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -98,6 +98,7 @@ Parcels Create: Создать
 trackingNumber: Трек номер
 shipDate: Дата отгрузки
 products: Продукты
+Content: Содержимое
 addresses: Адреса
 sendDetailWeight: Вес (грамм)
 sendDetailLength: Длина
