--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -17,7 +17,6 @@ Contact: Контакт
 Edit profile: Редактировать профиль
 Contact Information: Контактная информация
 First name: Имя
-VipPriceWeightEkspress: Экспресс
 User First Name: Имя
 Second name: Отчество
 User Second Name: Отчество
@@ -40,7 +39,6 @@ Have an account?: Нет аккаунта?
 Signup: Вход
 Authentication: Вход
 PASSWORD RESET: Сброс пароля
-Title form suport parcels: Обратная связь
 Fill with your mail to receive instructions on how to reset your password.: Введите свой Email для получения инструкции для сброса пароля.
 Enter email: Введите Email
 Enter _email: Email
@@ -54,9 +52,16 @@ Save avatar: Сохранить
 Save: Сохранить
 Hello: Привет
 Cabinet: Кабинет
+Add: Добавить
+Percles: посылку
+Send_d: Обратиться
+Select type : Выбрать
+Support: В поддержку
+Track comment: Комментарий
 Remember Me: Запомнить меня
 Error. Please fill all fields: Ошибка. Заполните, пожалуйста, все поля
 Data about the address delivery: Данные об адресе доставки
+Title form suport parcels: Обратная связь
 Choise delivery method: Выбрать способ доставки
 Addresses Edit: Редактирование адреса
 Address Create: Добавить адрес
@@ -129,14 +134,9 @@ Remove product: Удалить
 copyRigtht: Expressposhta 2019. All Rights Reserved
 Status: Статус
 Users: Пользователи
-Select type : Выбрать
 User: Пользователь
 Cost: Стоимость
 Weight: Вес
-Add: Добавить
-Percles: посылку
-Send_d: Обратиться
-Support: В поддержку
 DeliveryPrice: Прайс на доставку
 OrderStatus: Статус посылки
 Order: Посылки
@@ -160,8 +160,6 @@ Send Detail Length: Длина
 Send Detail Width: Ширина
 Send Detail Height: Высота
 Email: Ваш e-mail
-Subject: Тема сообщения
-Message: Сообщения
 Address: Адрес
 Shipping Costs: Стоимость отгрузки
 Delivery Status: Статус доставки
@@ -198,8 +196,6 @@ Russia: Россия
 Find for tracking number: Результат поиска
 Nothing Found: Ничего не найдено
 Date: Дата
-Order  id : Номер заказа
-Track comment: Комментарий
 StatusDescription: Статус
 Details: Подробней
 Recipient: Получатель
@@ -216,7 +212,7 @@ Orders Added sucusfull: Посылка добавлена
 Loading...: Загрузка...
 Close: Закрыть
 Save changes: Сохранить
-Order Edit: Изменение посылки
+Order Edit: Редактирование посылки
 No parcel: Список отправлений пуст
 Your password should be at least 6 characters: Ваш пароль должен содержать не менее 6 символов
 Action: Действие
@@ -225,9 +221,13 @@ Ukrainian: Украинский
 Russian: Русский
 Track the departure: Отследить отправление
 Track down: Отследить
+Message: Сообщение
+Subject: Тема сообщения
 OrderType: Тип доставки
 PriceWeightEconom: Прайс Эконом-Вес
 PriceWeightEconomVip: VIP Прайс Эконом-Вес
+PriceWeightEkspress: Прайс Экспресс-Вес
+VipPriceWeightEkspress: Экспресс
 Send: Отправить
 econom: Эконом
 express: Экспресс
