--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -190,6 +190,7 @@ No order: Нет посылок
 TN: ТН
 Type and hit enter ...: Введите и нажмите ввод ...
 Pay: Оплатить
+Paid: Оплачено
 count_short: К-во
 Cancel: Отмена
 Russia: Россия
