--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -190,6 +190,7 @@ No order: Немає відправлень
 TN: ТН
 Type and hit enter ...: Введіть і натисніть Enter ...
 Pay: Оплатити
+Paid: Оплачено
 count_short: К-сть
 Cancel: Скасування
 Russia: Росія
