--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -232,3 +232,5 @@ VipPriceWeightEkspress: VIP Прайс Експрес-Вага
 Send: Відправити
 econom: Економ
 express: Експрес
+Econom: Економ
+Express: Експрес
