--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -236,3 +236,6 @@ Econom: Эконом
 Express: Экспрес
 Facebook sign in: Войти через Facebook
 Addresses Add : Добавить адрес
+Sum Paid: Оплочено
+Need Paid: Нужно доплатить
+  getnewinvoice
