--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -236,3 +236,6 @@ Econom: Економ
 Express: Експрес
 Facebook sign in: Увiти через Facebook
 Addresses Add : Додати адресу
+Sum Paid: Сплачено
+Need Paid: Потрібно доплатити
+getnewinvoice: Не сплачено. Виставлений додатковий інвойс
