--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -238,4 +238,4 @@ Facebook sign in: Войти через Facebook
 Addresses Add : Добавить адрес
 Sum Paid: Оплочено
 Need Paid: Нужно доплатить
-  getnewinvoice
+getnewinvoice: Не оплачено. Выставлен дополнительный инвойс
