--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -239,3 +239,5 @@ Addresses Add : Додати адресу
 Sum Paid: Сплачено
 Need Paid: Потрібно доплатити
 getnewinvoice: Не сплачено. Виставлений додатковий інвойс
+LiqPay Sucesss: Успішна оплата
+paid: Оплачен - ждет отправки
