--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -208,6 +208,8 @@ Confirmed: Подтвержден
 Not Confirmed: Не подтвержден
 No Parcels: Нет посылок
 No Payments: Нет платежей
+Settings: Налаштування
+Price: Цiна
 New Parcels List: Новые посылки
 Orders Update sucusfull: Данные посылки обновлены
 Orders Added sucusfull: Посылка добавлена
@@ -215,6 +217,8 @@ Loading...: Загрузка...
 Close: Закрыть
 Save changes: Сохранить
 Order Edit: Редактирование посылки
+Invoices: Доплаты
+OrdersPraid: Оплаченные заказы
 No parcel: Список отправлений пуст
 Your password should be at least 6 characters: Ваш пароль должен содержать не менее 6 символов
 Action: Действие
